# Search_Engine

./: CMakeLists.txt  README.md  config.json  requests.json
include/: Checks.h  ConverterJSON.h  Exceptions.h  InvertedIndex.h  SearchServer.h
resources/: file1.txt  file2.txt  file3.txt  file4.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
